Fix issues on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,16 @@ body {
 .header-container {
 	display: flex;
 	justify-content: space-between;
-	align-items: baseline;
 	background-color: #333;
 	color: #eee;
 	padding: 45px 100px;
 	border-bottom: 2px solid #222;
+	align-items: center; /* Vertically center the tabs */
 }
 
 .name-job-container {
 	display: flex;
-	align-items: baseline; /* Aligns items to the text baseline */ 
+	align-items: center; /* Vertically center the tabs */
 	gap: 20px; /* Adds space between name and job title */
 }
 
@@ -39,10 +39,8 @@ body {
 }
 
 .name-job-container .myjob {
-	font-size: 1.5em;
-	color: #ccc;
-	align-items: baseline; /* Centers them vertically within the container */
 	font-size: 1.6em;
+	color: #ccc;
 }
 
 /* Tabs */
@@ -125,6 +123,7 @@ body {
 
 .section-watch {
     background-color: #ccc; /* Background color for section 2 */
+    text-align: center;
 }
 
 .row {
@@ -135,6 +134,16 @@ body {
 .column {
     flex: 1;
     padding: 10px;
+}
+
+
+.about_pic { 
+    width: 50%;
+    min-width: 500px;
+	margin-top: 0;
+	height: auto;
+	margin-top: 0px;
+	border-radius: 32px; /* Optional: for rounded corners */
 }
 
 .about_left { 
@@ -268,12 +277,6 @@ body {
 .contact-form button:hover {
 	background-color: #555;
 }
-.about-pic {
-    width: 100%;
-    height: auto;
-	margin-top: 0px;
-    border-radius: 32px; /* Optional: for rounded corners */
-}
 
 .no-style-link {
     color: inherit; /* Inherits the color from the parent element */
@@ -281,16 +284,30 @@ body {
     font-weight: inherit; /* Inherits font weight from the parent element */
 }
 
-/* html,body{ */
+@media screen and (max-width: 1000px) {
+	.container {
+		max-width: 70%;
+	}
+	.contact-form input, .contact-form textarea {
+		font-size: 14px;
+		padding: 8px;
+	}
+	.contact-form button {
+		font-size: 14px;
+		padding: 8px 16px;
+	}
+	.about_pic{
+		min-width: auto;
+		max-width: 400px;
+		width: 100%;
+		height: auto;
+		margin-top: 0px;
+		border-radius: 32px; /* Optional: for rounded corners */
+	}
+}
 
-    /* height: 100%; */
-/* } */
-
-/* iframe{ */
-    /* width:60%; */
-    /* height:70% */
-/* } */
-@media screen and (max-width: 600px) {
+/* Tab elements */
+@media screen and (max-width: 1000px) {
 	.header-container {
 		flex-direction: column;
 		align-items: flex-start;
@@ -300,20 +317,23 @@ body {
 		gap: 10px;
 		width: 100%;
 	}
+	.header-container .name-job-container {
+		flex-direction: column;
+		gap: 10px;
+		width: 100%;
+		margin-bottom: 20px;
+		text-align: center;
+	}
+	.header-container .name-job-container .myname {
+		text-align: center;
+		flex-wrap: nowrap;
+	}
+	.header-container .name-job-container .myjob {
+		text-align: center;
+	}
 	.header-container .tabs button {
 		font-size: 14px;
 		padding: 10px 12px;
 		text-align: left;
-	}
-	.container {
-		max-width: 90%;
-	}
-	.contact-form input, .contact-form textarea {
-		font-size: 14px;
-		padding: 8px;
-	}
-	.contact-form button {
-		font-size: 14px;
-		padding: 8px 16px;
 	}
 }
